--- a/3-tier-app.json
+++ b/3-tier-app.json
@@ -32,8 +32,8 @@
            "resource_type":"ChildLocaleServices",
            "LocaleServices":{
                "resource_type":"LocaleServices",
-               "id":  "default",
-               "marked_for_delete": "false",
+               "id":  "{{domain_id}}",
+               "marked_for_delete": "{{marked_for_delete}}",
                "tags": [
                  {
                    "scope": "{{scope-01}}",
@@ -127,9 +127,9 @@
     },
     {
       "resource_type": "ChildDomain",
-      "marked_for_delete": "false",
+      "marked_for_delete": "{{marked_for_delete}}",
       "Domain": {
-        "id": "default",
+        "id": "{{domain_id}}",
         "tags": [
           {
             "scope": "{{scope-01}}",
@@ -141,9 +141,9 @@
           }
         ],
         "resource_type": "Domain",
-        "description": "default",
-        "display_name": "default",
-        "marked_for_delete": "false",
+        "description": "{{domain_id}}",
+        "display_name": "{{domain_id}}",
+        "marked_for_delete": "{{marked_for_delete}}",
         "children": [
           {
             "resource_type": "ChildGroup",
@@ -290,14 +290,14 @@
                     "ANY"
                   ],
                   "destination_groups": [
-                    "/infra/domains/default/groups/{{secgroup1-id}}"
+                    "/infra/domains/{{domain_id}}/groups/{{secgroup1-id}}"
                   ],
                   "services": [
                     "/infra/services/HTTP",
                     "/infra/services/HTTPS"
                   ],
                   "scope": [
-                    "/infra/domains/default/groups/{{secgroupblanket-id}}"
+                    "/infra/domains/{{domain_id}}/groups/{{secgroupblanket-id}}"
                   ],
                   "action": "ALLOW"
                 },
@@ -308,16 +308,16 @@
                   "sequence_number": 2,
                   "logged": true,
                   "source_groups": [
-                    "/infra/domains/default/groups/{{secgroup1-id}}"
+                    "/infra/domains/{{domain_id}}/groups/{{secgroup1-id}}"
                   ],
                   "destination_groups": [
-                    "/infra/domains/default/groups/{{secgroup2-id}}"
+                    "/infra/domains/{{domain_id}}/groups/{{secgroup2-id}}"
                   ],
                   "services": [
                     "/infra/services/TCP_8443"
                   ],
                   "scope": [
-                    "/infra/domains/default/groups/{{secgroupblanket-id}}"
+                    "/infra/domains/{{domain_id}}/groups/{{secgroupblanket-id}}"
                   ],
                   "action": "ALLOW"
                 },
@@ -328,16 +328,16 @@
                   "sequence_number": 3,
                   "logged": true,
                   "source_groups": [
-                    "/infra/domains/default/groups/{{secgroup2-id}}"
+                    "/infra/domains/{{domain_id}}/groups/{{secgroup2-id}}"
                   ],
                   "destination_groups": [
-                    "/infra/domains/default/groups/{{secgroup3-id}}"
+                    "/infra/domains/{{domain_id}}/groups/{{secgroup3-id}}"
                   ],
                   "services": [
                     "/infra/services/MySQL"
                   ],
                   "scope": [
-                    "/infra/domains/default/groups/{{secgroupblanket-id}}"
+                    "/infra/domains/{{domain_id}}/groups/{{secgroupblanket-id}}"
                   ],
                   "action": "ALLOW"
                 }
@@ -406,10 +406,10 @@
         "lb_service_path": "/infra/lb-services/{{lb-id}}",
         "ip_address": "{{vs-ip}}",
         "ports": [
-          "80"
+          "443"
         ],
         "pool_path": "/infra/lb-pools/{{pool-id}}",
-        "application_profile_path": "/infra/lb-app-profiles/batchSetupHttpAppProfile"
+        "application_profile_path": "/infra/lb-app-profiles/default-tcp-lb-app-profile"
         }
       },
     {
@@ -430,15 +430,15 @@
         ],
         "resource_type": "LBPool",
         "active_monitor_paths": [
-          "/infra/lb-monitor-profiles/default-icmp-lb-monitor"
+          "/infra/lb-monitor-profiles/default-https-lb-monitor"
         ],
             "algorithm": "ROUND_ROBIN",
             "member_group": {
-                "group_path": "/infra/domains/default/groups/{{secgroup1-id}}",
+                "group_path": "/infra/domains/{{domain_id}}/groups/{{secgroup1-id}}",
                 "ip_revision_filter": "IPV4"
             },
             "snat_translation": {
-                "type": "LBSnatDisabled"
+                "type": "LBSnatAutoMap"
             }
       }
     }
